Botones del index.html listos

--- a/index.html
+++ b/index.html
@@ -55,59 +55,59 @@
             <div class="firstCategory">
                 <div><h3>Bolsos</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="secondCategory">
                 <div><h3>Pantalones & Jeans</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="thirdCategory">
                 <div><h3>Blusas</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="fourthCategory">
                 <div><h3>Tenis</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="toBriefcaseSection">
                 <h3>¿Quieres ver el catálogo completo?</h3>
-                <button id="toBriefcaseSection">VER CATÁLOGO</button>
+                <button class="toCategories">VER CATÁLOGO</button>
             </div>
             <div class="fifthCategory">
                 <div><h3>Vestidos & Faldas</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="sixthCategory">
                 <div><h3>Ropa deportiva</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="seventhCategory">
                 <div><h3>Hoodies & Sueters</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="eigthCategory">
                 <div><h3>Sandalias & Tacones</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="ninethCategory">
                 <div><h3>Chaquetas & Abrigos</h3></div>
                 <div id="buttonSection">
-                    <button>Ver Categoría Completa</button>
+                    <button class="toCategories">Ver Categoría Completa</button>
                 </div> 
             </div>
         </section>
@@ -123,6 +123,10 @@
             <img src="/src/assets/img/icons/facebook.png" alt="Facebook Icon">
         </div>
         <div>
+            <ul>
+                <span class="toCategories">Catálogo</span>
+                <span>Contacto</span>
+            </ul>
             <ul>
                 <li>📱 +57 301 2397022</li>
                 <li>📍 Medellín, CO</li>
