Botones del index.html listos

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
         <header>
             <div id="mobileHeader" class="mobileHeader">
-                <img id="myLogo" src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
+                <img id="toIndex" src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
                 <ul>
-                    <li id="contact"><span class="contactSpan">Contacto</span></li>
-                    <li id="catalogo"><img id="catalogoImg" src="/src/assets/img/icons/catalogo.png" alt="Ícono catálogo de productos"></li>
+                    <li id="toContact"><span class="contactSpan">Contacto</span></li>
+                    <li id="toBriefcase"><img id="catalogoImg" src="/src/assets/img/icons/catalogo.png" alt="Ícono catálogo de productos"></li>
                     <li><img id="menu" src="/src/assets/img/icons/menu.png" alt="Menu Icon"></li>
                 </ul>
             </div>
@@ -32,7 +32,7 @@
     </nav>
     <!--MENU HAMBURGUESA-->
     <div id="burguerMenu" class="burguerMenu">
-        <div><img id="adminAccess" src="/src/assets/img/icons/admin.png" alt="Admin Access Icon"><img id="closeMenu" src="/src/assets/img/icons/exit.png" alt="Icon to close Menu"></div>
+        <div><img id="toAdmin" src="/src/assets/img/icons/admin.png" alt="Admin Access Icon"><img id="closeMenu" src="/src/assets/img/icons/exit.png" alt="Icon to close Menu"></div>
         <img src="/src/assets/img/logos/logo.png" alt="El Baul de Severina Logo">
         <ul>
             <li id="toAboutUs">SOBRE NOSOTROS</li>
@@ -74,59 +74,59 @@
             <div class="firstCategory">
                 <div><h3>Bolsos</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="secondCategory">
                 <div><h3>Pantalones & Jeans</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="thirdCategory">
                 <div><h3>Blusas</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="fourthCategory">
                 <div><h3>Tenis</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="toBriefcaseSection">
                 <h3>¿Quieres ver el catálogo completo?</h3>
-                <button class="toCategories">VER CATÁLOGO</button>
+                <button id="toBriefcase">VER CATÁLOGO</button>
             </div>
             <div class="fifthCategory">
                 <div><h3>Vestidos & Faldas</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="sixthCategory">
                 <div><h3>Ropa deportiva</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="seventhCategory">
                 <div><h3>Hoodies & Sueters</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="eigthCategory">
                 <div><h3>Sandalias & Tacones</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
             <div class="ninethCategory">
                 <div><h3>Chaquetas & Abrigos</h3></div>
                 <div id="buttonSection">
-                    <button class="toCategories">Ver Categoría Completa</button>
+                    <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
         </section>
@@ -143,8 +143,8 @@
         </div>
         <div>
             <ul>
-                <span class="toCategories">Catálogo</span>
-                <span>Contacto</span>
+                <span id="toBriefcase">Catálogo</span>
+                <span id="toContact">Contacto</span>
             </ul>
             <ul>
                 <li>📱 +57 301 2397022</li>
