Botones del index.html listos

--- a/index.html
+++ b/index.html
@@ -56,18 +56,7 @@
                 <img src="/src/assets/img/logos/logo.png" alt="Logo de El Baul de Severina">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> <br> Ex dicta sunt quaerat. Ex dicta sunt quaerat. Ex dicta sunt quaerat. Ex dicta sunt quaerat. Ex dicta sunt quaerat.</p>
             </div>
-            <h2>Categorías</h2>
-            <div class="links">
-                <div><span>Bolsos</span><img src="/src/assets/img/icons/bolso.png" alt="Ícono de Categoria de Bolsos"></div>
-                <div><span>Jeans</span><img src="/src/assets/img/icons/jeans.png" alt="Ícono de Categoria de Pantalones y Jeans"></div>
-                <div><span>Blusas</span><img src="/src/assets/img/icons/blusa.png" alt="Ícono de Categoria de Blusas"></div>
-                <div><span>Tenis</span><img src="/src/assets/img/icons/zapatos.png" alt="Ícono de Categoria de Tenis"></div>
-                <div><span>Vestidos & Faldas</span><img src="/src/assets/img/icons/falda.png" alt="Ícono de Categoria de Vestidos y Faldas"></div>
-                <div><span>Ropa Deportiva</span><img src="/src/assets/img/icons/deportiva.png" alt="Ícono de Categoria de Ropa Deportiva"></div>
-                <div><span>Sueters</span><img src="/src/assets/img/icons/sueters.png" alt="Ícono de Categoria de Hoodies y Sueters"></div>
-                <div><span>Tacones</span><img src="/src/assets/img/icons/tacones.png" alt="Ícono de Categoria de Sandalias y Tacones"></div>
-                <div><span>Abrigos</span><img src="/src/assets/img/icons/abrigos.png" alt="Ícono de Categoria de Abrigos"></div>
-            </div>
+            <h2><img src="/src/assets/img/icons/start.png" alt="Ícono de Comenzar - Navegar por la tienda online"> Comenzar</h2>
         </section>
         <!--SECCIÓN DE CATEGORÍAS-->
         <section id="categoriesSection">
