Botones del index.html listos

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="/src/assets/img/logos/logo.png" alt="Logo de El Baul de Severina">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> <br> Ex dicta sunt quaerat. Ex dicta sunt quaerat. Ex dicta sunt quaerat. Ex dicta sunt quaerat. Ex dicta sunt quaerat.</p>
             </div>
-            <h2><img src="/src/assets/img/icons/start.png" alt="Ícono de Comenzar - Navegar por la tienda online"> Comenzar</h2>
+            <h2 id="comenzarButton"><img src="/src/assets/img/icons/start.png" alt="Ícono de Comenzar - Navegar por la tienda online"> Comenzar</h2>
         </section>
         <!--SECCIÓN DE CATEGORÍAS-->
         <section id="categoriesSection">
