--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
                     <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
+            <div class="toBriefcaseSection">
+                <h3>¿Quieres ver el catálogo completo?</h3>
+                <button id="toBriefcase"><img src="/src/assets/img/icons/catalogo.png" alt="Ícono de Catálogo de nuestra indumentaria">VER CATÁLOGO</button>
+            </div>
             <div class="fourthCategory">
                 <div><h3>Tenis</h3></div>
                 <div id="buttonSection">
                     <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
-            </div>
-            <div class="toBriefcaseSection">
-                <h3>¿Quieres ver el catálogo completo?</h3>
-                <button id="toBriefcase">VER CATÁLOGO</button>
             </div>
             <div class="fifthCategory">
                 <div><h3>Vestidos & Faldas</h3></div>
@@ -94,6 +94,7 @@
                     <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
+            <!--CLIENTES FELICES-->
             <div class="sixthCategory">
                 <div><h3>Ropa deportiva</h3></div>
                 <div id="buttonSection">
@@ -106,6 +107,30 @@
                     <button id="toBriefcase">Ver Categoría Completa</button>
                 </div> 
             </div>
+            <!--CONTACTO-->
+            <section id="contact">
+                <h2>¡Contáctanos!</h2>
+                <div>
+                    <ul>
+                        <li><img src="/src/assets/img/icons/facebook.png" alt="Ícono de Facebook"></li>
+                        <li><img src="/src/assets/img/icons/instagram.png" alt="Ícono de Instagram"></li>
+                        <li><img src="/src/assets/img/icons/whatsapp.png" alt="Ícono de Whatsapp"></li>
+                        <li><img src="/src/assets/img/icons/gmail.png" alt="Ícono de Correo Electrónico"></li>
+                    </ul>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Instagram</li>
+                        <li>Whatsapp</li>
+                        <li>Correo</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li>📱 +57 301 2397022 </li>
+                        <li>📍 Medellín, CO</li>  
+                    </ul>
+                </div>
+            </section>
             <div class="eigthCategory">
                 <div><h3>Sandalias & Tacones</h3></div>
                 <div id="buttonSection">
@@ -119,8 +144,6 @@
                 </div> 
             </div>
         </section>
-        <!--CLIENTES FELICES-->
-        
     </main>
     <!--FOOTER-->
     <footer>
